# lab3_sensors_template

./: LICENSE  README.md
instructions/: instructions.md
part1/: CMakeLists.txt  prj.conf
part1/src/: main.c
part2/: CMakeLists.txt  prj.conf  rpi_pico2_rp2350a_m33.overlay
part2/src/: main.c
